# VibeTrack-AI-Coding-Behavior-Analyzer

./: .gitignore  COLLABORATORS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  setup.sh
.claude/skills/: vibetrack.md
.github/workflows/: ci.yml  pages.yml
.opencode/: SKILL.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pytest.ini  requirements.txt
backend/app/: api_versions.py  auth.py  cache.py  database.py  dependencies.py  logging.py  middleware.py  websocket.py
backend/app/api/: activity.py  admin.py  analytics.py  api_keys.py  auth.py  batch.py  events.py  metrics.py  middleware.py  ml.py  notifications.py  recommendations.py  reports.py  sentiment.py  sessions.py  stats.py  system.py  teams.py  users.py  webhooks.py
backend/app/models/: event.py  session.py  team.py  user.py
backend/app/services/: analytics.py  api_keys.py  audit.py  backup.py  batch_operations.py  email.py  encryption.py  export.py  insights.py  integration.py  metrics.py  ml_insights.py  permissions.py  queue.py  rate_limiter.py  recommendations.py  scheduler.py  sentiment.py  sitemap.py  storage.py  validator.py  vibe_score.py  webhooks.py
backend/tests/: conftest.py  test_api.py
chrome-extension/: README.md  manifest.json
chrome-extension/background/: background.js
chrome-extension/popup/: popup.html  popup.js
desktop-tracker/: Cargo.toml  README.md  tauri.conf.json
desktop-tracker/src/: database.rs  main.rs  productivity.rs  tracker.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: .nojekyll  manifest.json  sw.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalyticsSummary.jsx  Badge.jsx  BreakTracker.jsx  ErrorBoundary.jsx  EventLog.jsx  GoalsTracker.jsx  HeatmapCalendar.jsx  LoadingSpinner.jsx  Modal.jsx  Navbar.jsx  Notifications.jsx  Table.jsx  (+13 more)
mcp-server/: README.md  package-lock.json  package.json  server.js
(+15 files in other folders)
