[package]
name = "vibetrack-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "notification-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
directories = "5.0"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp"
]}

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
